# poller-rs

./: Cargo.toml  README.md
examples/: callback.rs  evdev.rs
src/: epoll.rs  lib.rs  select.rs
