[package]
name = "poller"
version = "0.1.2"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# Metadata for Publish
description = """
File I/O events library for Rust.
"""
documentation = "https://docs.rs/poller"
homepage = "https://github.com/varphone/poller-rs"
readme = "README.md"
categories = ["embedded", "asynchronous"]
license = "MIT"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.66"
